tests/ui/std/impl-error-type-id.stderr
error: cannot override `type_id` because it already has a `final` definition in the trait
  --> $DIR/impl-error-type-id.rs:13:5
   |
LL |     fn type_id(&self) -> std::any::TypeId {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `type_id` is marked final here
  --> $SRC_DIR/core/src/error.rs:LL:COL

error: aborting due to 1 previous error

